# mealsteals

./: .gitignore  AmazonQ.md  README.md  compose.yml  run.py
cfn/: deploy.sh  mealsteals-base-infra.yaml  mealsteals-dealdb.yaml  mealsteals-dealfinder.yaml  mealsteals-dealscraper.yaml
dealAPI/: .flaskenv  Dockerfile  config.py  dealAPI.py  pyproject.toml  requirements.txt  test.py
dealAPI/app/: __init__.py  main.py  models.py
dealAPI/app/api/routes/: __init__.py  deals.py  index.py  restaurants.py  search.py
dealAPI/app/api/v1/: __init__.py  deals.py  restaurants.py  root.py
dealAPI/app/core/: logging.py  schemas.py  setup.py
dealAPI/app/core/exceptions/: http_exceptions.py
dealAPI/app/models/: deal.py  restaurant.py
dealAPI/app/repositories/: deal_repository.py  restaurant_repository.py
dealAPI/app/schemas/: deal.py  restaurant.py
dealAPI/app/services/: deal_service.py  queue_service.py  restaurant_service.py
dealAPI/migrations/versions/: 01ba0d842726_make_address_fields_optional_for_now.py  57e8a41f513b_create_deals_last_updated_field.py  7efd213fddcb_subdivide_restaurant_address.py  a4edaa6c8318_create_deal_hash.py  c267e527659f_make_deals_components_optional.py  cd8cc6c08265_create_gmaps_id_field.py  ed0e170b8ec7_make_deals_components_optional.py  eea0316ac44b_restaurants_table.py
dealAPI/tests/: test_restaurant_model.py
dealfinder/: .flaskenv  Dockerfile  config.py  dealfinder.py  find_restaurants.py  requirements.txt  test.py
dealmapper/: Dockerfile  package-lock.json  package.json
dealscraper/: Dockerfile  requirements.txt  (+1 more)
(+89 files in other folders)
